--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -30,7 +35,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'com.google.android.material:material:1.2.0'
 
     implementation 'com.google.dagger:dagger-android:2.+'
@@ -46,12 +51,14 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.+'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.+"
+
 
     //OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:+'
-    implementation 'com.squareup.okio:okio:+'
+    implementation 'com.squareup.okhttp3:okhttp:4.+'
+    implementation 'com.squareup.okio:okio:2.+'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
