--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "de.parndt.calendar"
+        applicationId "de.parndt.schupnet"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
@@ -33,10 +33,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.core:core-ktx:1.+'
+    implementation 'androidx.appcompat:appcompat:1.+'
+    implementation 'androidx.constraintlayout:constraintlayout:2.+'
 
     implementation 'com.google.dagger:dagger-android:2.+'
     implementation 'com.google.dagger:dagger-android-support:2.+'
@@ -53,6 +52,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.+"
 
+    //Material-Design
+    implementation 'com.google.android.material:material:1.+'
 
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:4.+'
