--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,25 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "de.parndt.schupnet"
+        applicationId "de.parndt.mydos"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
     }
 
     buildTypes {
@@ -28,7 +35,10 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+
+
 }
+
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -40,6 +50,15 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.+'
     implementation 'com.google.dagger:dagger-android-support:2.+'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.+"
+
+    implementation 'androidx.room:room-runtime:2.+'
+    implementation "androidx.room:room-ktx:2.+"
+    implementation "androidx.room:room-common:2.+"
+    implementation "androidx.room:room-rxjava2:2.+"
+    kapt 'androidx.room:room-compiler:2.+'
+
     kapt 'com.google.dagger:dagger-compiler:2.+'
     kapt 'com.google.dagger:dagger-android-processor:2.+'
 
